--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "setup": "npm run format && npm run type-check && npm run lint"
   },
   "dependencies": {
+    "@pinecone-database/pinecone": "^6.1.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -30,7 +31,9 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@upstash/redis": "^1.35.1",
     "axios": "^1.6.2",
+    "chromadb": "^3.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
@@ -38,6 +41,7 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.16",
     "idb": "^8.0.0",
+    "ioredis": "^5.6.1",
     "lucide-react": "^0.294.0",
     "next": "^15.3.5",
     "papaparse": "^5.4.1",
@@ -47,6 +51,7 @@
     "react-dropzone": "^14.2.3",
     "react-markdown": "^9.0.1",
     "recharts": "^2.8.0",
+    "redis": "^5.5.6",
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
@@ -58,6 +63,7 @@
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@types/crypto-js": "^4.2.1",
+    "@types/ioredis": "^4.28.10",
     "@types/jest": "^29.5.8",
     "@types/node": "^20.10.5",
     "@types/papaparse": "^5.3.14",
