--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "test:e2e": "playwright test",
     "type-check": "tsc --noEmit",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
-    "setup": "npm run format && npm run type-check && npm run lint"
+    "setup": "npm run format && npm run type-check && npm run lint",
+    "setup:chromadb": "./setup-chromadb.sh",
+    "test:chromadb": "node test-chromadb.js"
   },
   "dependencies": {
+    "@chroma-core/default-embed": "^0.1.8",
     "@pinecone-database/pinecone": "^6.1.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
@@ -55,6 +58,7 @@
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
+    "weaviate-ts-client": "^2.2.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
