--- a/package.json
+++ b/package.json
@@ -14,51 +14,34 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "setup": "npm run format && npm run type-check && npm run lint",
     "setup:chromadb": "./setup-chromadb.sh",
-    "test:chromadb": "node test-chromadb.js"
+
+    "ingest:vectors": "ts-node src/scripts/ingest-vectors.ts",
+    "test:vectors": "jest src/tests/vector-store.test.ts"
   },
   "dependencies": {
     "@chroma-core/default-embed": "^0.1.8",
     "@pinecone-database/pinecone": "^6.1.1",
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-alert-dialog": "^1.0.5",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
-    "@radix-ui/react-switch": "^1.0.3",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-tooltip": "^1.0.7",
     "@upstash/redis": "^1.35.1",
     "axios": "^1.6.2",
     "chromadb": "^3.0.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "cmdk": "^0.2.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
-    "framer-motion": "^10.16.16",
     "idb": "^8.0.0",
     "ioredis": "^5.6.1",
     "lucide-react": "^0.294.0",
     "next": "^15.3.5",
-    "papaparse": "^5.4.1",
-    "pdf-parse": "^1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3",
-    "react-markdown": "^9.0.1",
-    "recharts": "^2.8.0",
+    "react-markdown": "^9.1.0",
     "redis": "^5.5.6",
-    "remark-gfm": "^4.0.0",
+    "rehype-highlight": "^7.0.2",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "weaviate-ts-client": "^2.2.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
@@ -70,8 +53,6 @@
     "@types/ioredis": "^4.28.10",
     "@types/jest": "^29.5.8",
     "@types/node": "^20.10.5",
-    "@types/papaparse": "^5.3.14",
-    "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
