--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\"",
     "setup": "npm run format && npm run type-check && npm run lint",
     "setup:chromadb": "./setup-chromadb.sh",
-
     "ingest:vectors": "ts-node src/scripts/ingest-vectors.ts",
     "test:vectors": "jest src/tests/vector-store.test.ts"
   },
@@ -60,6 +59,7 @@
     "eslint-config-next": "14.0.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "null-loader": "^4.0.1",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.4.0",
