Lots of changes August 14th 2025

--- a/env.example
+++ b/env.example
@@ -36,6 +36,10 @@ REDIS_DB=0
 CACHE_URL=https://your-instance.upstash.io
 CACHE_PASSWORD=your_upstash_token_here
 
+# Supabase Configuration
+SUPA_BASE_PROJECT_URL=https://yjsjxiptdoextcadozdz.supabase.co
+SUPA_BASE_API_KEY=your_supabase_api_key_here
+
 # Vector Store Configuration
 # Vector Store Provider: 'chroma' (local) or 'pinecone' (production)
 VECTOR_STORE_PROVIDER=chroma
