--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@pinecone-database/pinecone": "^6.1.1",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@supabase/supabase-js": "^2.53.0",
     "@upstash/redis": "^1.35.1",
     "axios": "^1.6.2",
     "chromadb": "^3.0.6",
@@ -29,6 +30,7 @@
     "clsx": "^2.0.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
+    "dotenv": "^17.2.1",
     "idb": "^8.0.0",
     "ioredis": "^5.6.1",
     "lucide-react": "^0.294.0",
